Fix running tests on >= JVM9